--- a/proiect-daw/Views/Users/Index.cshtml
+++ b/proiect-daw/Views/Users/Index.cshtml
@@ -1,56 +1,98 @@
-﻿
-<br />
-<br />
+﻿@* Motorul de cautare *@
+<form method="GET">
+    <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Search user" name="search"
+               value="@ViewBag.SearchString">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+    </div>
+</form>
 
-<div class="row">
-@foreach (var user in ViewBag.UsersList)
+<br /><br />
+
+@if (ViewBag.SearchedUsersList != null)
 {
-    <div class="col-4 mb-4">
-            <div class="card" style="height:100%; width: 100%;">
-        
-            <div class="card-body d-flex justify-content-between flex-column">
-                <div>
-                    <p><i class="bi bi-person"> </i> UserName: @user.UserName</p>
+    <div class="row">
+        @foreach (var searched_user in ViewBag.SearchedUsersList)
+        {
+            <div class="col-4 mb-4">
+                <div class="card" style="height:100%; width: 100%;">
 
-                    <p><i class="bi bi-envelope"></i> Email utilizator: @user.Email</p>
+                    <div class="card-body d-flex justify-content-between flex-column">
+                        <div>
+                            <p><i class="bi bi-person"> </i> UserName: @searched_user.UserName</p>
+                            <p><i class="bi bi-envelope"></i> Email utilizator: @searched_user.Email</p>
+                        </div>
+                        <div class="d-flex flex-row justify-content-between p-3">
 
+                            <div>
+                                <a asp-controller="Users" asp-action="Edit" asp-route-id="@searched_user.Id" class="btn btn-sm btn-success">Editare utilizator</a>
+                            </div>
 
-                    @if (@user.FirstName != null)
-                    {
-                            <p><i class="bi bi-person"> </i> Nume utilizator: @user.FirstName</p>
-                    }
+                            <div>
+                                <a asp-controller="Users" asp-action="Show" asp-route-id="@searched_user.Id" class="btn btn-sm btn-success">Vizualizare utilizator</a>
+                            </div>
 
-
-                    @if (@user.LastName != null)
-                    {
-                            <p><i class="bi bi-person"> </i> Prenume utilizator: @user.LastName</p>
-                    }
-
-
-                    @if (@user.PhoneNumber != null)
-                    {
-                            <p><i class="bi bi-phone"></i> Telefon utilizator: @user.PhoneNumber</p>
-                    }
-
-                </div>
-                <div class="d-flex flex-row justify-content-between p-3">
-
-                    <div>
-                        <a asp-controller="Users" asp-action="Edit" asp-route-id="@user.Id" class="btn btn-sm btn-success">Editare utilizator</a>
+                        </div>
                     </div>
-
-                    <div>
-                        <a asp-controller="Users" asp-action="Show" asp-route-id="@user.Id" class="btn btn-sm btn-success">Vizualizare utilizator</a>
-                    </div>
-
                 </div>
             </div>
-         </div>
+        }
     </div>
 }
-   
-</div>
+
+@if (ViewBag.SearchedUsersList == null)
+{
+    <h2>Utilizatorii platformei BookBack</h2>
+
+    <div class="row">
+        @foreach (var user in ViewBag.UsersList)
+        {
+            <div class="col-4 mb-4">
+                <div class="card" style="height:100%; width: 100%;">
+
+                    <div class="card-body d-flex justify-content-between flex-column">
+                        <div>
+                            <p><i class="bi bi-person"> </i> UserName: @user.UserName</p>
+
+                            <p><i class="bi bi-envelope"></i> Email utilizator: @user.Email</p>
+
+
+                            @if (@user.FirstName != null)
+                            {
+                                <p><i class="bi bi-person"> </i> Nume utilizator: @user.FirstName</p>
+                            }
+
+
+                            @if (@user.LastName != null)
+                            {
+                                <p><i class="bi bi-person"> </i> Prenume utilizator: @user.LastName</p>
+                            }
+
+
+                            @if (@user.PhoneNumber != null)
+                            {
+                                <p><i class="bi bi-phone"></i> Telefon utilizator: @user.PhoneNumber</p>
+                            }
+
+                        </div>
+                        <div class="d-flex flex-row justify-content-between p-3">
+
+                            <div>
+                                <a asp-controller="Users" asp-action="Edit" asp-route-id="@user.Id" class="btn btn-sm btn-success">Editare utilizator</a>
+                            </div>
+
+                            <div>
+                                <a asp-controller="Users" asp-action="Show" asp-route-id="@user.Id" class="btn btn-sm btn-success">Vizualizare utilizator</a>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+
+    </div>
 
     <br />
     <br />
-
+}
