--- a/proiect-daw/Views/Shared/_Layout.cshtml
+++ b/proiect-daw/Views/Shared/_Layout.cshtml
@@ -1,4 +1,15 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
+@{
+    var user = await UserManager.GetUserAsync(User);
+    var firstName = user?.FirstName;
+    var lastName = user?.LastName;
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -16,6 +27,8 @@
             @RenderBody()
         </main>
     </div>
+
+    <partial name="_LoginPartial" />
 
     <footer>
         <div class="container">
