--- a/proiect-daw/Views/Users/Index.cshtml
+++ b/proiect-daw/Views/Users/Index.cshtml
@@ -1,4 +1,18 @@
 ﻿@* Motorul de cautare *@
+<style>
+  
+    a {
+        text-decoration: none;
+        color: inherit;
+        transition: color 0.3s ease, transform 0.3s ease;
+    }
+
+    a:hover {
+        color: #007bff; 
+        transform: scale(1.05);
+    }
+</style>
+
 <form method="GET">
     <div class="input-group mb-3">
         <input type="text" class="form-control" placeholder="Search user" name="search"
@@ -7,7 +21,8 @@
     </div>
 </form>
 
-<br /><br />
+<br />
+<br />
 
 @if (ViewBag.SearchedUsersList != null)
 {
@@ -15,26 +30,24 @@
         @foreach (var searched_user in ViewBag.SearchedUsersList)
         {
             <div class="col-4 mb-4">
-                <div class="card" style="height:100%; width: 100%;">
-
-                    <div class="card-body d-flex justify-content-between flex-column">
-                        <div>
-                            <p><i class="bi bi-person"> </i> UserName: @searched_user.UserName</p>
-                            <p><i class="bi bi-envelope"></i> Email utilizator: @searched_user.Email</p>
-                        </div>
-                        <div class="d-flex flex-row justify-content-between p-3">
-
+                <a asp-controller="Users" asp-action="Show" asp-route-id="@searched_user.Id" class="card-link">
+                    <div class="card" style="height:100%; width: 100%;">
+                        <div class="card-body d-flex justify-content-between flex-column">
                             <div>
-                                <a asp-controller="Users" asp-action="Edit" asp-route-id="@searched_user.Id" class="btn btn-sm btn-success">Editare utilizator</a>
+                                <p><i class="bi bi-person"> </i> UserName: @searched_user.UserName</p>
+                                <p><i class="bi bi-envelope"></i> Email utilizator: @searched_user.Email</p>
                             </div>
-
-                            <div>
-                                <a asp-controller="Users" asp-action="Show" asp-route-id="@searched_user.Id" class="btn btn-sm btn-success">Vizualizare utilizator</a>
+                            <div class="d-flex flex-row justify-content-between p-3">
+                                @if (User.IsInRole("Admin"))
+                                {
+                                    <div>
+                                        <a asp-controller="Users" asp-action="Edit" asp-route-id="@searched_user.Id" class="btn btn-sm btn-success">Editare utilizator</a>
+                                    </div>
+                                }
                             </div>
-
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
         }
     </div>
@@ -48,49 +61,38 @@
         @foreach (var user in ViewBag.UsersList)
         {
             <div class="col-4 mb-4">
-                <div class="card" style="height:100%; width: 100%;">
-
-                    <div class="card-body d-flex justify-content-between flex-column">
-                        <div>
-                            <p><i class="bi bi-person"> </i> UserName: @user.UserName</p>
-
-                            <p><i class="bi bi-envelope"></i> Email utilizator: @user.Email</p>
-
-
-                            @if (@user.FirstName != null)
-                            {
-                                <p><i class="bi bi-person"> </i> Nume utilizator: @user.FirstName</p>
-                            }
-
-
-                            @if (@user.LastName != null)
-                            {
-                                <p><i class="bi bi-person"> </i> Prenume utilizator: @user.LastName</p>
-                            }
-
-
-                            @if (@user.PhoneNumber != null)
-                            {
-                                <p><i class="bi bi-phone"></i> Telefon utilizator: @user.PhoneNumber</p>
-                            }
-
-                        </div>
-                        <div class="d-flex flex-row justify-content-between p-3">
-
+                <a asp-controller="Users" asp-action="Show" asp-route-id="@user.Id" class="card-link">
+                    <div class="card" style="height:100%; width: 100%;">
+                        <div class="card-body d-flex justify-content-between flex-column">
                             <div>
-                                <a asp-controller="Users" asp-action="Edit" asp-route-id="@user.Id" class="btn btn-sm btn-success">Editare utilizator</a>
+                                <p><i class="bi bi-person"> </i> UserName: @user.UserName</p>
+                                <p><i class="bi bi-envelope"></i> Email utilizator: @user.Email</p>
+                                @if (@user.FirstName != null)
+                                {
+                                    <p><i class="bi bi-person"> </i> Nume utilizator: @user.FirstName</p>
+                                }
+                                @if (@user.LastName != null)
+                                {
+                                    <p><i class="bi bi-person"> </i> Prenume utilizator: @user.LastName</p>
+                                }
+                                @if (@user.PhoneNumber != null)
+                                {
+                                    <p><i class="bi bi-phone"></i> Telefon utilizator: @user.PhoneNumber</p>
+                                }
                             </div>
-
-                            <div>
-                                <a asp-controller="Users" asp-action="Show" asp-route-id="@user.Id" class="btn btn-sm btn-success">Vizualizare utilizator</a>
+                            <div class="d-flex flex-row justify-content-between p-3">
+                                @if (User.IsInRole("Admin"))
+                                {
+                                    <div>
+                                        <a asp-controller="Users" asp-action="Edit" asp-route-id="@user.Id" class="btn btn-sm btn-success">Editare utilizator</a>
+                                    </div>
+                                }
                             </div>
-
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
         }
-
     </div>
 
     <br />
