--- a/proiect-daw/Views/Users/Show.cshtml
+++ b/proiect-daw/Views/Users/Show.cshtml
@@ -4,14 +4,22 @@
     <div class="card-body d-flex justify-content-between flex-column">
         <div>
             <p><i class="bi bi-person"> </i> UserName: @Model.UserName</p>
-            <p><i class="bi bi-envelope"></i> Email utilizator: @Model.Email</p>
 
-            @if (ViewBag.Roles.Count > 0)
+            @if (Model.PrivateProfile)
             {
-                <p><i class="bi bi-person"> </i> Roluri utilizator:</p>
-                @foreach (var role in ViewBag.Roles)
+                <p><i class="bi bi-person"> </i> Nume utilizator: @Model.FirstName @Model.LastName</p>
+            }
+            else
+            {
+                <p><i class="bi bi-envelope"></i> Email utilizator: @Model.Email</p>
+
+                @if (ViewBag.Roles.Count > 0)
                 {
-                    <span class="rounded-pill bg-dark mr-2 px-4 py-2 text-white">@role</span>
+                    <p><i class="bi bi-person"> </i> Roluri utilizator:</p>
+                    @foreach (var role in ViewBag.Roles)
+                    {
+                        <span class="rounded-pill bg-dark mr-2 px-4 py-2 text-white">@role</span>
+                    }
                 }
             }
         </div>
@@ -26,3 +34,4 @@
         }
     </div>
 </div>
+
