--- a/proiect-daw/Views/Shared/_LoginPartial.cshtml
+++ b/proiect-daw/Views/Shared/_LoginPartial.cshtml
@@ -10,6 +10,10 @@
     var lastName = user?.LastName;
 }
 
+<head>
+    <!-- Other head content -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
+</head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand font-logo" href="@Url.Action("Index", "Home", new { area = "" })">Backbook</a>
@@ -18,6 +22,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link text-white d-flex align-items-center" asp-controller="Groups" asp-action="Index">
+                        <i class="bi bi-people-fill me-2"></i> Groups
+                    </a>
+                </li>
 
                 <li class="nav-item dropdown">
                     <a class="nav-link text-white d-flex align-items-center" title="Find" id="Find" role="button" asp-controller="Users" asp-action="Index">
@@ -27,6 +36,14 @@
 
                 @if (SignInManager.IsSignedIn(User))
                 {
+                    <li class="nav-item dropdown">
+                        <form asp-controller="GroupMemberships" asp-action="PendingApproval" method="get" class="d-inline">
+                            <button type="submit" class="btn">
+                                <i class="bi bi-bell text-white"></i>
+                            </button>
+                        </form>
+                    </li>
+
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white d-flex align-items-center" title="Manage" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             @firstName @lastName
