--- a/proiect-daw/Views/Posts/Index.cshtml
+++ b/proiect-daw/Views/Posts/Index.cshtml
@@ -28,11 +28,13 @@
     <div class="card">
 
 
-        <a style="text-decoration:none; color:black" 
-            asp-controller="Posts" asp-action="Show" asp-route-id="@post.Id">
-
-
-            <partial name="PostInfo" model="post"></partial>
+        <a style="text-decoration:none; color:black"
+           asp-controller="Posts" asp-action="Show" asp-route-id="@post.Id">
+            @{
+                ViewData["CurrentUserId"] = ViewBag.UserCurent;
+                ViewData["Likes"] = ViewData[$"Likes_{post.Id}"];
+            }
+            <partial name="PostInfo" model="post" viewdata="ViewData"></partial>
         </a>
 
     </div>
