readaugate butoanele de dat join in grup + UI/UX mai bun

--- a/proiect-daw/Views/Groups/Index.cshtml
+++ b/proiect-daw/Views/Groups/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿
-<br />
-<h2 class="text-center">Afisare</h2>
+@{
+    var searchQuery = ViewBag.SearchString;
 
-<br />
+	bool hasSearched = searchQuery.Length != 0;
+}
 
 @if (ViewBag.Message != null)
 {
@@ -16,12 +17,40 @@
 @* Motorul de cautare *@
 <form method="GET">
     <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Search topics or keywords" name="search"
-               value="@ViewBag.SearchString">
+        <input type="text" class="form-control" placeholder="Search topics or keywords" name="search" value="@ViewBag.SearchString">
         <button class="btn btn-outline-success" type="submit">Search</button>
     </div>
 </form>
 
+@if(!hasSearched) 
+{
+    <br />
+    <h2>Grupurile tale</h2>
+    <br />
+    @foreach (var group in ViewBag.OwnGroups)
+    {
+        <div class="card">
+
+            <partial name="GroupInfo" model="group" />
+
+            <a class="btn btn-primary btn-sm" asp-controller="Groups" asp-action="Show" asp-route-id="@group.Id">Afisare</a>
+
+        </div>
+
+        <br />
+        <br />
+    }
+
+    <br />
+    <h2>Poate te interesează și...</h2>
+    <br />
+}
+else
+{
+    <br />
+    <h2>Grupuri denumite '@ViewBag.SearchString'</h2>
+    <b />
+}
 
 @foreach (var group in ViewBag.Groups)
 {
@@ -36,6 +65,7 @@
     <br />
     <br />
 }
+
 
 
 <div>
